--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -721,3 +721,24 @@
 	CustomSelectionSize:
 		CustomBounds: 220,220
 
+^Gate:
+	Inherits: ^Building
+	Valued:
+		Cost: 250
+	Health:
+		HP: 350
+	Armor:
+		Type: Heavy
+	LineBuildNode:
+		Types: wall, turret
+	-RenderBuilding:
+	RenderSimple:
+		Sequence: closed
+	-FrozenUnderFog:
+	-Selectable:
+	-Building:
+	-WithMakeAnimation:
+	-TargetableBuilding:
+	-WithBuildingExplosion:
+	-Sellable:
+	Gate:
