--- a/mods/ts/rules/gdi-support.yaml
+++ b/mods/ts/rules/gdi-support.yaml
@@ -25,6 +25,15 @@ GAWALL:
 	LineBuild:
 		NodeTypes: wall, turret
 
+GAGATE_A:
+	Inherits: ^Gate
+	Gate:
+		Footprint: ---
+		Dimensions: 3,1
+	Tooltip:
+		Name: Gate
+		Description: GDI vertical gate
+
 GACTWR:
 	Inherits: ^Defense
 	-WithSpriteBody:
