--- a/mods/ts/rules/gdi-support.yaml
+++ b/mods/ts/rules/gdi-support.yaml
@@ -27,12 +27,29 @@ GAWALL:
 
 GAGATE_A:
 	Inherits: ^Gate
-	Gate:
-		Footprint: ---
-		Dimensions: 3,1
+	Buildable:
+		Queue: Defense
+		BuildPaletteOrder: 100
+		Prerequisites: gapile, ~structures.gdi
 	Tooltip:
-		Name: Gate
-		Description: GDI vertical gate
+		Name: GDI Gate
+		Description: Stops infantry and blocks enemy fire.\nCan NOT be crushed by tanks.
+	Gate:
+		Dimensions: 3,1
+		Footprint: xxx
+
+GAGATE_B:
+	Inherits: ^Gate
+	Buildable:
+		Queue: Defense
+		BuildPaletteOrder: 100
+		Prerequisites: gapile, ~structures.gdi
+	Tooltip:
+		Name: GDI Gate
+		Description: Stops infantry and blocks enemy fire.\nCan NOT be crushed by tanks.
+	Gate:
+		Dimensions: 1,3
+		Footprint: x x x
 
 GACTWR:
 	Inherits: ^Defense
