--- a/mods/ts/rules/nod-support.yaml
+++ b/mods/ts/rules/nod-support.yaml
@@ -25,6 +25,32 @@ NAWALL:
 	LineBuild:
 		NodeTypes: wall, turret
 
+NAGATE_A:
+	Inherits: ^Gate
+	Buildable:
+		Queue: Defense
+		BuildPaletteOrder: 100
+		Prerequisites: nahand, ~structures.nod
+	Tooltip:
+		Name: Nod Gate
+		Description: Stops infantry and blocks enemy fire.\nCan NOT be crushed by tanks.
+	Gate:
+		Dimensions: 3,1
+		Footprint: xxx
+
+NAGATE_B:
+	Inherits: ^Gate
+	Buildable:
+		Queue: Defense
+		BuildPaletteOrder: 100
+		Prerequisites: nahand, ~structures.nod
+	Tooltip:
+		Name: Nod Gate
+		Description: Stops infantry and blocks enemy fire.\nCan NOT be crushed by tanks.
+	Gate:
+		Dimensions: 1,3
+		Footprint: x x x
+
 NALASR:
 	Inherits: ^Defense
 	Valued:
