--- a/mods/ts/rules/gdi-support.yaml
+++ b/mods/ts/rules/gdi-support.yaml
@@ -25,6 +25,40 @@ GAWALL:
 	LineBuild:
 		NodeTypes: wall, turret
 
+GAGATE_A:
+	Inherits: ^Gate
+	Buildable:
+		Queue: Defense
+		BuildPaletteOrder: 100
+		Prerequisites: gapile, ~structures.gdi
+	Tooltip:
+		Name: GDI Gate
+		Description: Stops infantry and blocks enemy fire.\nCan NOT be crushed by tanks.
+	Gate:
+		Dimensions: 3,1
+		Footprint: xxx
+	WithGateSpriteBody:
+		WallConnections: -1,0, 3,0
+	LineBuildNode:
+		Connections: -1,0, 1,0
+
+GAGATE_B:
+	Inherits: ^Gate
+	Buildable:
+		Queue: Defense
+		BuildPaletteOrder: 100
+		Prerequisites: gapile, ~structures.gdi
+	Tooltip:
+		Name: GDI Gate
+		Description: Stops infantry and blocks enemy fire.\nCan NOT be crushed by tanks.
+	Gate:
+		Dimensions: 1,3
+		Footprint: x x x
+	WithGateSpriteBody:
+		WallConnections: 0,-1, 0,3
+	LineBuildNode:
+		Connections: 0,-1, 0,1
+
 GACTWR:
 	Inherits: ^Defense
 	-WithSpriteBody:
