--- a/mods/ts/rules/nod-support.yaml
+++ b/mods/ts/rules/nod-support.yaml
@@ -25,6 +25,40 @@ NAWALL:
 	LineBuild:
 		NodeTypes: wall, turret
 
+NAGATE_A:
+	Inherits: ^Gate
+	Buildable:
+		Queue: Defense
+		BuildPaletteOrder: 100
+		Prerequisites: nahand, ~structures.nod
+	Tooltip:
+		Name: Nod Gate
+		Description: Stops infantry and blocks enemy fire.\nCan NOT be crushed by tanks.
+	Gate:
+		Dimensions: 3,1
+		Footprint: xxx
+	WithGateSpriteBody:
+		WallConnections: -1,0, 3,0
+	LineBuildNode:
+		Connections: -1,0, 1,0
+
+NAGATE_B:
+	Inherits: ^Gate
+	Buildable:
+		Queue: Defense
+		BuildPaletteOrder: 100
+		Prerequisites: nahand, ~structures.nod
+	Tooltip:
+		Name: Nod Gate
+		Description: Stops infantry and blocks enemy fire.\nCan NOT be crushed by tanks.
+	Gate:
+		Dimensions: 1,3
+		Footprint: x x x
+	WithGateSpriteBody:
+		WallConnections: 0,-1, 0,3
+	LineBuildNode:
+		Connections: 0,-1, 0,1
+
 NALASR:
 	Inherits: ^Defense
 	Valued:
