--- a/mods/d2/rules/colorpicker.yaml
+++ b/mods/d2/rules/colorpicker.yaml
@@ -1,8 +1,7 @@
-^carryall.dune2.colorpicker:
-	Inherits: carryall.dune2
+^carryall.colorpicker:
+	Inherits: carryall
 	Aircraft:
 		InitialFacing: 104
 	RenderSprites:
-		Image: carryall.dune2
+		Image: carryall
 		Palette: colorpicker
-
