--- a/mods/d2/rules/quad.yaml
+++ b/mods/d2/rules/quad.yaml
@@ -1,5 +1,5 @@
-quad.dune2:
-	Inherits: ^Dune2.Vehicle
+quad:
+	Inherits: ^Vehicle
 	Buildable:
 		Queue: Vehicle
 		#Prerequisites: upgrade.light, ~techlevel.medium
