--- a/mods/d2/rules/harvester.yaml
+++ b/mods/d2/rules/harvester.yaml
@@ -37,7 +37,7 @@ harvester:
 		Actor: harvester.husk
 	WithHarvestOverlay:
 		Palette: effect50alpha
-	#WithDockingAnimation:
+	WithDockingAnimation:
 	AttractsWorms:
 		Intensity: 700
 	SelectionDecorations:
