--- a/mods/d2/maps/shellmap/map.yaml
+++ b/mods/d2/maps/shellmap/map.yaml
@@ -40,6 +40,243 @@ Players:
 		Enemies: Atreides
 
 Actors:
+	Actor0: refinery
+		Owner: Neutral
+		Location: 59,68
+	Actor1: refinery
+		Owner: Neutral
+		Location: 61,76
+	Actor2: windtrap
+		Owner: Neutral
+		Location: 70,67
+	Actor3: windtrap
+		Owner: Neutral
+		Location: 70,69
+	Actor4: silo
+		Owner: Neutral
+		Location: 68,67
+	Actor5: silo
+		Owner: Neutral
+		Location: 68,69
+	Actor6: conyard
+		Owner: Neutral
+		Location: 61,65
+	Actor7: wormspawner
+		Owner: Neutral
+		Location: 50,72
+	Actor8: wormspawner
+		Owner: Neutral
+		Location: 38,63
+	Actor9: wormspawner
+		Owner: Neutral
+		Location: 44,53
+	Actor10: refinery
+		Owner: Neutral
+		Location: 59,70
+	Actor11: refinery
+		Owner: Neutral
+		Location: 48,63
+	Actor12: refinery
+		Owner: Neutral
+		Location: 48,61
+	Actor13: refinery
+		Owner: Neutral
+		Location: 70,62
+	Actor14: refinery
+		Owner: Neutral
+		Location: 70,64
+	Actor15: refinery
+		Owner: Neutral
+		Location: 63,59
+	Actor16: refinery
+		Owner: Neutral
+		Location: 63,61
+	Actor17: refinery
+		Owner: Neutral
+		Location: 40,69
+	Actor18: refinery
+		Owner: Neutral
+		Location: 44,71
+	Actor19: refinery
+		Owner: Neutral
+		Location: 52,80
+	Actor20: refinery
+		Owner: Neutral
+		Location: 71,84
+	Actor21: refinery
+		Owner: Neutral
+		Location: 72,81
+	Actor22: refinery
+		Owner: Neutral
+		Location: 69,78
+	Actor23: refinery
+		Owner: Neutral
+		Location: 69,76
+	Actor24: refinery
+		Owner: Neutral
+		Location: 69,74
+	Actor25: refinery
+		Owner: Neutral
+		Location: 69,71
+	Actor26: refinery
+		Owner: Neutral
+		Location: 75,54
+	Actor27: refinery
+		Owner: Neutral
+		Location: 75,51
+	Actor28: refinery
+		Owner: Neutral
+		Location: 54,48
+	Actor29: refinery
+		Owner: Neutral
+		Location: 61,53
+	Actor30: refinery
+		Owner: Neutral
+		Location: 60,55
+	Actor31: wormspawner
+		Owner: Neutral
+		Location: 51,77
+	Actor32: wormspawner
+		Owner: Neutral
+		Location: 69,58
+	Actor33: wormspawner
+		Owner: Neutral
+		Location: 56,45
+	Actor34: wormspawner
+		Owner: Neutral
+		Location: 78,80
+	Actor35: wormspawner
+		Owner: Neutral
+		Location: 43,61
+	Actor36: wormspawner
+		Owner: Neutral
+		Location: 48,58
+	Actor37: wormspawner
+		Owner: Neutral
+		Location: 58,46
+	Actor38: concrete2
+		Owner: Neutral
+		Location: 60,63
+	Actor39: concrete2
+		Owner: Neutral
+		Location: 61,60
+	Actor40: concrete2
+		Owner: Neutral
+		Location: 61,58
+	Actor41: concrete2
+		Owner: Neutral
+		Location: 60,61
+	Actor42: wall
+		Owner: Neutral
+		Location: 62,59
+	Actor43: wall
+		Owner: Neutral
+		Location: 62,60
+	Actor44: wall
+		Owner: Neutral
+		Location: 62,61
+	Actor45: wall
+		Owner: Neutral
+		Location: 62,62
+	Actor46: wall
+		Owner: Neutral
+		Location: 62,63
+	Actor47: wall
+		Owner: Neutral
+		Location: 64,63
+	Actor48: wall
+		Owner: Neutral
+		Location: 63,63
+	Actor49: wall
+		Owner: Neutral
+		Location: 61,67
+	Actor50: wall
+		Owner: Neutral
+		Location: 60,67
+	Actor51: wall
+		Owner: Neutral
+		Location: 58,67
+	Actor52: wall
+		Owner: Neutral
+		Location: 59,67
+	Actor53: wall
+		Owner: Neutral
+		Location: 57,67
+	Actor54: wall
+		Owner: Neutral
+		Location: 55,67
+	Actor55: wall
+		Owner: Neutral
+		Location: 54,67
+	Actor56: wall
+		Owner: Neutral
+		Location: 54,67
+	Actor57: wall
+		Owner: Neutral
+		Location: 53,67
+	Actor58: wall
+		Owner: Neutral
+		Location: 56,67
+	Actor59: wall
+		Owner: Neutral
+		Location: 47,62
+	Actor60: wall
+		Owner: Neutral
+		Location: 47,61
+	Actor61: wall
+		Owner: Neutral
+		Location: 46,61
+	Actor62: wall
+		Owner: Neutral
+		Location: 46,62
+	Actor63: wall
+		Owner: Neutral
+		Location: 45,61
+	Actor64: wall
+		Owner: Neutral
+		Location: 68,79
+	Actor65: wall
+		Owner: Neutral
+		Location: 68,78
+	Actor66: wall
+		Owner: Neutral
+		Location: 67,70
+	Actor67: wall
+		Owner: Neutral
+		Location: 67,68
+	Actor68: wall
+		Owner: Neutral
+		Location: 67,69
+	Actor69: wall
+		Owner: Neutral
+		Location: 67,67
+	Actor70: wall
+		Owner: Neutral
+		Location: 67,66
+	Actor71: wall
+		Owner: Neutral
+		Location: 68,66
+	Actor72: wall
+		Owner: Neutral
+		Location: 69,66
+	Actor73: wall
+		Owner: Neutral
+		Location: 71,66
+	Actor74: wall
+		Owner: Neutral
+		Location: 70,66
+	Actor75: wall
+		Owner: Neutral
+		Location: 72,66
+	Actor76: wall
+		Owner: Neutral
+		Location: 72,67
+	Actor77: wall
+		Owner: Neutral
+		Location: 68,71
+	Actor78: wall
+		Owner: Neutral
+		Location: 67,71
 
 Smudges:
 
