--- a/OpenRA.Mods.D2/OpenRA.Mods.D2.csproj
+++ b/OpenRA.Mods.D2/OpenRA.Mods.D2.csproj
@@ -77,9 +77,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Graphics\D2SpriteSequence.cs" />
     <Compile Include="SpriteLoaders\IcnD2Loader.cs" />
-    <Compile Include="Traits\Render\WithSpriteTileset.cs" />
+    <Compile Include="Traits\Render\WithTilesetBody.cs" />
     <Compile Include="Traits\World\D2ResourceLayer.cs" />
     <Compile Include="Traits\World\D2EditorResourceLayer.cs" />
   </ItemGroup>
@@ -118,6 +117,8 @@ cd "$(SolutionDir)"</PostBuildEvent>
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Graphics\" />
+  </ItemGroup>
   <ItemGroup />
 </Project>
