Added Firestorm generator and firestorm walls

--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -483,6 +483,7 @@
 	AttackMove:
 		Voice: Move
 	ActorLostNotification:
+	NotifyActorsBelow:
 	BodyOrientation:
 		QuantizedFacings: 0
 		CameraPitch: 90
