--- a/OpenRA.Mods.TS/OpenRA.Mods.TS.csproj
+++ b/OpenRA.Mods.TS/OpenRA.Mods.TS.csproj
@@ -75,6 +75,8 @@
     <Compile Include="Traits\Render\WithVoxelWaterBody.cs" />
     <Compile Include="UtilityCommands\LegacyTilesetImporter.cs" />
     <Compile Include="Traits\World\TSShroudPalette.cs" />
+    <Compile Include="Traits\Buildings\EnergyWall.cs" />
+    <Compile Include="Traits\SupportPowers\FirestormPower.cs" />
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
@@ -88,4 +90,7 @@
 copy "$(TargetPath)" "$(SolutionDir)mods/ts/"
 cd "$(SolutionDir)"</PostBuildEvent>
   </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="Traits\SupportPowers\" />
+  </ItemGroup>
 </Project>
