--- a/mods/ts/rules/nod-structures.yaml
+++ b/mods/ts/rules/nod-structures.yaml
@@ -71,6 +71,7 @@ NAAPWR:
 	DisabledOverlay:
 	SelectionDecorations:
 		VisualBounds: 100, 74, 0, -12
+	ProvidesPrerequisite@buildingname:
 
 NAHAND:
 	Inherits: ^Building
